# Checkers

./: .gitignore  LICENSE  README.md
project/: CMakeLists.txt
project/include/: typedefs.h
project/include/model/: Computer.h  Human.h  Pawn.h  Piece.h  Player.h  Queen.h  State.h  UI.h
project/savefiles/: Example Corrupt Save File  Example Good Save File  komentarz do plikow  testFile
project/src/: main.cpp
project/src/model/: Computer.cpp  Human.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  State.cpp  UI.cpp
project/test/: PiecesTest.cpp  PlayersTest.cpp  StateTest.cpp  UITest.cpp
